macOS: Right-clicking the file name on the title bar doesn't work as expected when the path includes a whitespace character #63383

Closed
opened 2019-04-08 06:35:15 +02:00 by yvt · 3 comments
Contributor

System Information
Operating system: macOS 10.14.4
Graphics card: AMD Radeon R9 M295X 4GB

Blender Version
Broken: 2.55-beta, 2.79, 2.80
Working: 2.54-beta

Short description of error
On macOS, the parent directories of a currently opened file can be listed and opened by right-clicking the file name on the title bar.
This functionality doesn't work correctly when the file path includes a whitespace character.

Exact steps for others to reproduce the error

  1. Save a .blend file to a directory whose path includes a whitespace character.
  2. Right-click the file name on the Blender window's title bar.
  3. (a) Observe the menu item in the second row (representing the direct parent directory of the currently opened file).
  4. (b) Click the menu item.

Expected behavior: (a) The menu item displays the correct directory name. (b) A new Finder window is opened for the directory.
Screen Shot 2019-04-08 at 21.16.24.png
Actual behavior: (a) The displayed directory name is percent-encoded. (b) Nothing seems to happen except for closing the popup menu.
Screen Shot 2019-04-08 at 13.07.11.png

**System Information** Operating system: macOS 10.14.4 Graphics card: AMD Radeon `R9` M295X 4GB **Blender Version** Broken: 2.55-beta, 2.79, 2.80 Working: 2.54-beta **Short description of error** On macOS, the parent directories of a currently opened file can be listed and opened by right-clicking the file name on the title bar. This functionality doesn't work correctly when the file path includes a whitespace character. **Exact steps for others to reproduce the error** 1. Save a `.blend` file to a directory whose path includes a whitespace character. 2. Right-click the file name on the Blender window's title bar. 3. (a) Observe the menu item in the second row (representing the direct parent directory of the currently opened file). 4. (b) Click the menu item. Expected behavior: (a) The menu item displays the correct directory name. (b) A new Finder window is opened for the directory. ![Screen Shot 2019-04-08 at 21.16.24.png](https://archive.blender.org/developer/F6919007/Screen_Shot_2019-04-08_at_21.16.24.png) Actual behavior: (a) The displayed directory name is percent-encoded. (b) Nothing seems to happen except for closing the popup menu. ![Screen Shot 2019-04-08 at 13.07.11.png](https://archive.blender.org/developer/F6918269/Screen_Shot_2019-04-08_at_13.07.11.png)
Author
Contributor

Added subscriber: @TomoakiKawada

Added subscriber: @TomoakiKawada
Stefan Werner self-assigned this 2019-05-29 13:14:55 +02:00

This issue was referenced by 29550f8748

This issue was referenced by 29550f87484919065e24ecb513ec64b9a978d03f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63383
No description provided.