Fix T63383: macOS: Right-clicking the file name on the title bar doesn't work as expected when the path includes a whitespace character

File path didn't need to be escaped.